# rocket_simulation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  pytest.ini  sine_wave_csv_data.cpp  test_example.cpp
.github/workflows/: cicd_actions.yml
cmake/: CompilerOptions.cmake  FetchCatch2.cmake
python/: animate_rocket_sim_csv_data.py  plot_csv_data.py  tcp_socket_client_rocket_sim.py  websocket_connector.py
source/: CMakeLists.txt
source/box/: CMakeLists.txt  box.hpp  test_box.cpp
source/box_volume/: CMakeLists.txt  box_volume.hpp  test_box_volume.cpp
source/hello/: CMakeLists.txt
source/rocket/: CMakeLists.txt  rocket.hpp  rocket_real_time_thread.cpp  rocket_sim_csv_data.cpp  rocket_sim_tcp_socket_server.cpp  test_rocket.cpp
source/rocket/python/: animate_rocket_sim_csv_data.py  plot_rocket_sim_csv_data.py  tcp_socket_client_rocket_sim.py  test_websocket.py  websocket_connector.py
source/rocket/unit_test/: test_rocket.cpp
source/rocket/utility/: numerical_integration.hpp  sim_scheduler.hpp
source/sine_wave/: CMakeLists.txt  sine_wave_csv_data.cpp
source/test/: CMakeLists.txt
source/utility/: command_sequence.hpp  numerical_integration.hpp  sim_scheduler.hpp
template/: template.cpp  template.hpp
tests/: conftest.py  tcp_test_socket.py  test_socket_integration.py
